<resources>
    <string name="app_name">GymkApp</string>
    <string name="prompt_password">Password</string>
    <string name="buttonToLogin">Log In</string>
    <string name="prompt_username">Username</string>
    <string name="LogoDescription">This is the application logo</string>
    <string name="AppTitle">GymkApp</string>
    <string name="RegisterLink">Register</string>
    <string name="RegisterText">Not a member yet?</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="LogoFlagDescription">This is the flag icon</string>
    <string name="TokenKey">LoginToken</string>
    <string name="logoutText">Log out</string>
    <string name="MenuMap">Map</string>
    <string name="MenuSocialNet">Social</string>
    <string name="MenuConf">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
