<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.WelcomeFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/AppTitle"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/buttonToLogin"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp" />

    <Button
        android:id="@+id/registerButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:text="@string/RegisterLink"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toEndOf="@+id/textRegister" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/RegisterText"
        android:textAppearance="@style/TextAppearance.MyTheme.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.186" />

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/LogoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:srcCompat="@drawable/start_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>