<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".login.LoginFragment"> <!-- Robando la clase -->

    <ImageView
        android:id="@+id/iconFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/LogoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bandera" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconFlag">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/user_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTextUserLogin"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/prompt_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/lock_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTextPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButtonLF"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/buttonToLogin"
            android:enabled="false" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonBack2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="64dp"
        android:layout_height="74dp"
        app:icon="@drawable/arrow_back"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearance="@style/ShapeAppearance.MyTheme.SmallComponent.NavButtons" /> <!--centrado?-->

</androidx.constraintlayout.widget.ConstraintLayout>